# SerhiiDanylets.github.io

./: Makefile  README.md  pyproject.toml  setup.cfg
app/: main.py  recipe_data.py  schemas.py
nginx/: default.conf
ops/: Dockerfile.api
part-07-database/: README.md  prestart.py  prestart.sh  pyproject.toml
part-07-database/alembic/: env.py
part-07-database/app/: deps.py  initial_data.py  main.py  recipe_data.py
part-07-database/app/crud/: __init__.py  crud_recipe.py  crud_user.py
part-07-database/app/db/: base.py  init_db.py  session.py
part-07-database/app/models/: recipe.py  user.py
part-07-database/app/schemas/: __init__.py  recipe.py  user.py
part-07-database/app/templates/: index.html
python-project/: docker-compose.yml
python-project/ops/: start-api.sh
