[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.poetry]
authors = []
description = ""
name = "market-properties-api"
version = "0"

[tool.poetry.dependencies]
fastapi = "^0.81.0"
python = "^3.8"
uvicorn = "^0.18.3"

[tool.poetry.group.dev.dependencies]
yamllint = "^1.27.1"
